--- a/EntityFrameworkCore.PrimaryKey/EntityFrameworkCore.PrimaryKey.csproj
+++ b/EntityFrameworkCore.PrimaryKey/EntityFrameworkCore.PrimaryKey.csproj
@@ -15,7 +15,15 @@
     <FileVersion>1.2.0.0</FileVersion>
     <Version>1.2.0</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.0" />
